# fmrapi

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/fmrapi/: __init__.py  fmrapi.py
tests/: test_fmrapi.py
