[tool.poetry]
name = "fmrapi"
version = "0.1.0"
description = "A Python client to the Fusion Metadata Registry (FMR) API"
authors = [Daniel Gil Sanchez", Tony Fujs"]
license = "CC0 v1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
b64 = "^0.4"
logging = "^0.4.9.6"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
